[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/font1.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/font1bold.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]

resource_name = "Credits Go Up"
length = 10.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 276, 740 ), Vector2( 276, -2523 ) ]
}

[node name="Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
credits_containers = NodePath("CreditsContainer")
credits_animation_player = NodePath("CreditsContainer/AnimationPlayer")

[node name="ButtonPlay" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 521.0
margin_top = 317.0
margin_right = 812.0
margin_bottom = 412.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="ButtonCredits" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 521.0
margin_top = 433.0
margin_right = 812.0
margin_bottom = 528.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credits"
flat = false
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="ButtonExit" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 521.0
margin_top = 549.0
margin_right = 812.0
margin_bottom = 644.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="Label" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 395.0
margin_top = 30.0
margin_right = 973.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Media Truck Driver "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Label2" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 484.0
margin_top = 116.0
margin_right = 995.0
margin_bottom = 243.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "SIMULATOR"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Background" parent="." index="5" instance=ExtResource( 3 )]

[node name="CreditsContainer" type="Control" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ColorRect" type="ColorRect" parent="CreditsContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 212.0
margin_top = -13.0
margin_right = 1113.0
margin_bottom = 735.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CreditsContainer" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/Credits Go Up" = SubResource( 1 )
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options" ]

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 276.0
margin_top = 740.0
margin_right = 1042.0
margin_bottom = 3282.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[b]Developers[/b]


Guilherme Vieira

Jairo Honorio
	
	
	
	

[b]Additional Credits[/b]


City vector by Freepik
	
	
	
	

[b]Special Thanks[/b]


Universidad de São Paulo
	
CCSL
	
GGJ-USP Organizers"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Developers


Guilherme Vieira

Jairo Honorio
	
	
	
	

Additional Credits


City vector by Freepik
	
	
	
	

Special Thanks


Universidad de São Paulo
	
CCSL
	
GGJ-USP Organizers"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect", "custom_fonts" ]

[connection signal="pressed" from="ButtonPlay" to="." method="_on_ButtonPlay_pressed"]

[connection signal="pressed" from="ButtonCredits" to="." method="_on_ButtonCredits_pressed"]

[connection signal="pressed" from="ButtonExit" to="." method="_on_ButtonExit_pressed"]

[connection signal="animation_finished" from="CreditsContainer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


